--- a/main.ipynb
+++ b/main.ipynb
@@ -5,7 +5,9 @@
    "id": "ef18c283-577b-4c7f-a0cc-5ec25a01954b",
    "metadata": {},
    "source": [
-    "### Requirements"
+    "### Requirements\n",
+    "\n",
+    "Uncomment this line to install requirements if necessary:"
    ]
   },
   {
@@ -15,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install -U python-dotenv matplotlib"
+    "#!pip install -U python-dotenv matplotlib"
    ]
   },
   {
@@ -33,6 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from datetime import datetime, timezone, timedelta\n",
     "from dotenv import load_dotenv\n",
     "from pprint import pprint\n",
     "import matplotlib.pyplot as plt\n",
@@ -95,7 +98,12 @@
     "            return None\n",
     "    except sqlite3.Error as e:\n",
     "        print(f\"Error executing SQL query: {e}\")\n",
-    "        sys.exit(1)"
+    "        sys.exit(1)\n",
+    "\n",
+    "def msg_sequence_to_ctime(sequence):\n",
+    "    ts = str(sequence)[:-3]\n",
+    "    dt = datetime.fromtimestamp(int(ts))\n",
+    "    return dt.strftime(\"%c\")"
    ]
   },
   {
@@ -165,7 +173,9 @@
     "    execute_query(msg_conn, query)\n",
     "    query = \"INSERT INTO MSG VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?)\"\n",
     "    for i, row in enumerate(msg):\n",
-    "        execute_query(msg_conn, query, row, no_commit=True)\n",
+    "        r = list(row)\n",
+    "        r[-4] = msg_sequence_to_ctime(r[7]) # use Reserved6 to store ctime\n",
+    "        execute_query(msg_conn, query, r, no_commit=True)\n",
     "        if i % 5000 == 0:\n",
     "            msg_conn.commit()\n",
     "    msg_conn.commit()\n",
@@ -178,11 +188,17 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3b702808-aa98-43db-8171-a214538403d2",
+   "id": "f9a63da3-e0da-498a-a504-6ead76b639c2",
    "metadata": {},
    "source": [
-    "---\n",
-    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "79f2d5a5-ff75-4237-b2ad-53e93cffa2da",
+   "metadata": {},
+   "source": [
     "### Report\n",
     "\n",
     "今年我们一共发送了..."
@@ -311,12 +327,14 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0d869593-2449-443e-b354-e654ab59517e",
+   "cell_type": "markdown",
+   "id": "9fc034f1-2b0c-419b-9a52-49aa987e0b74",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Credit\n",
+    "\n",
+    "[purple4pur/wx-chat-visualize](https://github.com/purple4pur/wx-chat-visualize)"
+   ]
   }
  ],
  "metadata": {
