add report of per month and per day

--- a/main.ipynb
+++ b/main.ipynb
@@ -199,28 +199,7 @@
    "id": "79f2d5a5-ff75-4237-b2ad-53e93cffa2da",
    "metadata": {},
    "source": [
-    "### Report\n",
-    "\n",
-    "今年我们一共发送了..."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "31a92372-87c5-4973-85a7-a3bdff2d6018",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "res = execute_query(msg_conn, \"SELECT COUNT(*) FROM MSG\")\n",
-    "print(res[0][0])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "60647963-465a-4e36-b28d-3db3ca81334f",
-   "metadata": {},
-   "source": [
-    "...条消息。"
+    "### Report"
    ]
   },
   {
@@ -233,24 +212,23 @@
     "senders = [\"Purple\", \"Blue\"]\n",
     "senders_cn = [\"紫先生\", \"蓝小姐\"]\n",
     "colors = [\"#b780ff\", \"#059af7\"] # purple, blue\n",
-    "wedgeprops = dict(width=0.7, edgecolor='w', linewidth=3)\n",
     "\n",
     "data = [\n",
     "    execute_query(msg_conn, \"SELECT COUNT(*) FROM MSG WHERE IsSender = 1\")[0][0],\n",
     "    execute_query(msg_conn, \"SELECT COUNT(*) FROM MSG WHERE IsSender = 0\")[0][0],\n",
     "]\n",
-    "labels = [f\"Purple: {data[0]}\", f\"Blue: {data[1]}\"]\n",
+    "\n",
+    "print(f\"今年我们一共发送了 {data[0] + data[1]} 条消息，\")\n",
+    "print(f\"其中，{senders_cn[0]}发送了 {data[0]} 条，{senders_cn[1]}发送了 {data[1]} 条：\")\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(4, 4))\n",
     "ax.pie(\n",
     "    data,\n",
-    "    labels=labels,\n",
+    "    labels=[f\"Purple\\n{data[0]}\", f\"Blue\\n{data[1]}\"],\n",
     "    autopct=\"%.2f%%\",\n",
     "    colors=colors,\n",
-    "    wedgeprops=wedgeprops,\n",
+    "    wedgeprops=dict(width=0.6, edgecolor='w', linewidth=4),\n",
     ")\n",
-    "\n",
-    "print(f\"其中，{senders_cn[0]}发送了 {data[0]} 条，{senders_cn[1]}发送了 {data[1]} 条：\")\n",
     "plt.show()"
    ]
   },
@@ -298,16 +276,6 @@
     "if VERBOSE == \"1\":\n",
     "    pprint(data_show)\n",
     "\n",
-    "x = np.arange(2)\n",
-    "width = 0.4\n",
-    "multiplier = 0\n",
-    "\n",
-    "fig, ax = plt.subplots(figsize=(12, 4))\n",
-    "for i, d in enumerate(data_show):\n",
-    "    rects = ax.bar(x * width + i, d, width, color=colors)\n",
-    "    ax.bar_label(rects)\n",
-    "ax.set_xticks(np.arange(len(show)) + width/2, show)\n",
-    "\n",
     "def print_type_compare(key, desc):\n",
     "    d = data[key]\n",
     "    morer = 0 if d[0] > d[1] else 1\n",
@@ -315,14 +283,161 @@
     "    pct = d[morer] * 100.0 / d[lesser] - 100\n",
     "    print(f\"{senders_cn[morer]}发出了更多的{desc}，达到了 {d[morer]} 条，比{senders_cn[lesser]}多出了 {pct:.2f}% ！\")\n",
     "\n",
-    "print_type_compare(\"Text\", \"文字\")\n",
+    "print_type_compare(\"Text\", \"文字消息\")\n",
     "print_type_compare(\"Pic\", \"图片\")\n",
     "print_type_compare(\"Video\", \"视频\")\n",
     "print_type_compare(\"Voice\", \"语音\")\n",
     "print_type_compare(\"Emoji\", \"表情包\")\n",
-    "print_type_compare(\"Call\", \"视频通话\")\n",
+    "print_type_compare(\"Call\", \"通话\")\n",
     "print_type_compare(\"Tap\", \"拍一拍\")\n",
     "print_type_compare(\"Trans\", \"红包和转账\")\n",
+    "\n",
+    "x = np.arange(2)\n",
+    "width = 0.4\n",
+    "fig, ax = plt.subplots(figsize=(9, 4))\n",
+    "for i, d in enumerate(data_show):\n",
+    "    rects = ax.bar(x * width + i, d, width, color=colors)\n",
+    "    ax.bar_label(rects)\n",
+    "ax.set_ylabel(\"Messages\")\n",
+    "ax.set_xticks(np.arange(len(show)) + width/2, show)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "270d0e5c-adc9-4b78-899f-7c44e2a3dbaf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "show = [\"Jan\", \"Feb\", \"Mar\", \"Apr\", \"May\", \"Jun\", \"Jul\", \"Aug\", \"Sep\", \"Oct\", \"Nov\", \"Dec\"]\n",
+    "data = []\n",
+    "for m in show:\n",
+    "    data.append([\n",
+    "        execute_query(msg_conn, \"SELECT COUNT(*) FROM MSG WHERE IsSender = 1 AND Reserved6 LIKE ?\", [f\"%{m}%\"])[0][0],\n",
+    "        execute_query(msg_conn, \"SELECT COUNT(*) FROM MSG WHERE IsSender = 0 AND Reserved6 LIKE ?\", [f\"%{m}%\"])[0][0],\n",
+    "    ])\n",
+    "data = np.array(data).T\n",
+    "data_sum = np.sum(data, axis=0)\n",
+    "if VERBOSE == \"1\":\n",
+    "    pprint(data)\n",
+    "    pprint(data_sum)\n",
+    "\n",
+    "max_i = np.argmax(data_sum)\n",
+    "min_i = np.argmin(data_sum)\n",
+    "pct = data_sum[max_i] * 100.0 / data_sum[min_i] - 100\n",
+    "month_cn = [\"一月\", \"二月\", \"三月\", \"四月\", \"五月\", \"六月\", \"七月\", \"八月\", \"九月\", \"十月\", \"十一月\", \"十二月\"]\n",
+    "print(f\"聊天最少的月份是{month_cn[min_i]}，只有 {data_sum[min_i]} 条消息；\")\n",
+    "print(f\"聊天最多的月份是{month_cn[max_i]}，竟然有 {data_sum[max_i]} 条消息，比{month_cn[min_i]}多出了 {pct:.2f}% !\")\n",
+    "\n",
+    "x = np.arange(len(show))\n",
+    "width = 0.65\n",
+    "bottom = np.zeros(len(show))\n",
+    "fig, ax = plt.subplots(figsize=(11, 4))\n",
+    "for i, d in enumerate(data):\n",
+    "    rects = ax.bar(x, d, width, bottom=bottom, color=colors[i])\n",
+    "    ax.bar_label(rects, label_type=\"center\")\n",
+    "    bottom += d\n",
+    "ax.set_ylabel(\"Messages\")\n",
+    "ax.set_xticks(x, show)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0baf4811-a2f6-4e09-a002-bfdc4efacd43",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "show = [\"Mon\", \"Tue\", \"Wed\", \"Thu\", \"Fri\", \"Sat\", \"Sun\"]\n",
+    "data = []\n",
+    "for m in show:\n",
+    "    data.append([\n",
+    "        execute_query(msg_conn, \"SELECT COUNT(*) FROM MSG WHERE IsSender = 1 AND Reserved6 LIKE ?\", [f\"%{m}%\"])[0][0],\n",
+    "        execute_query(msg_conn, \"SELECT COUNT(*) FROM MSG WHERE IsSender = 0 AND Reserved6 LIKE ?\", [f\"%{m}%\"])[0][0],\n",
+    "    ])\n",
+    "data = np.array(data).T\n",
+    "data_sum = np.sum(data, axis=0)\n",
+    "if VERBOSE == \"1\":\n",
+    "    pprint(data)\n",
+    "    pprint(data_sum)\n",
+    "\n",
+    "max_i = np.argmax(data_sum)\n",
+    "min_i = np.argmin(data_sum)\n",
+    "pct = data_sum[max_i] * 100.0 / data_sum[min_i] - 100\n",
+    "day_cn = [\"星期一\", \"星期二\", \"星期三\", \"星期四\", \"星期五\", \"星期六\", \"星期天\"]\n",
+    "print(f\"{day_cn[min_i]}的聊天最少，只有 {data_sum[min_i]} 条消息；\")\n",
+    "print(f\"{day_cn[max_i]}的聊天最多，竟然有 {data_sum[max_i]} 条消息，比{day_cn[min_i]}多出了 {pct:.2f}% !\")\n",
+    "\n",
+    "x = np.arange(len(show))\n",
+    "width = 0.65\n",
+    "bottom = np.zeros(len(show))\n",
+    "fig, ax = plt.subplots(figsize=(6, 4))\n",
+    "for i, d in enumerate(data):\n",
+    "    rects = ax.bar(x, d, width, bottom=bottom, color=colors[i])\n",
+    "    ax.bar_label(rects, label_type=\"center\")\n",
+    "    bottom += d\n",
+    "ax.set_ylabel(\"Messages\")\n",
+    "ax.set_xticks(x, show)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a17e66c4-8f35-4625-abec-23725af4d800",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dates = []\n",
+    "dates_raw = []\n",
+    "dt = datetime.fromtimestamp(int(START_TIMESTAMP), tz=timezone(timedelta(hours=8)))\n",
+    "end = datetime.fromtimestamp(int(END_TIMESTAMP), tz=timezone(timedelta(hours=8)))\n",
+    "while dt < end:\n",
+    "    dates.append([dt.strftime(\"%b %d\").replace(\" 0\", \"  \"), dt.strftime(\"%Y\")])\n",
+    "    dates_raw.append(dt)\n",
+    "    dt += timedelta(days=1)\n",
+    "if VERBOSE == \"1\":\n",
+    "    pprint(dates[:10])\n",
+    "    pprint(dates[-10:])\n",
+    "\n",
+    "data = []\n",
+    "for d in dates:\n",
+    "    data.append(execute_query(\n",
+    "        msg_conn,\n",
+    "        \"SELECT COUNT(*) FROM MSG WHERE Reserved6 LIKE ?\",\n",
+    "        [f\"%{d[0]}%{d[1]}\"]\n",
+    "    )[0][0])\n",
+    "if VERBOSE == \"1\":\n",
+    "    pprint(data[:10])\n",
+    "    pprint(data[-10:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e2cd9b9d-fd19-439d-84c6-0a6abec9d607",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "max_i = np.argmax(data)\n",
+    "min_i = np.argmin(data)\n",
+    "pct = data[max_i] * 100.0 / (data[min_i] + 1) - 100\n",
+    "print(f\"{dates_raw[max_i].month} 月 {dates_raw[max_i].day} 日是聊天最多的一天，足足发送了 {data[max_i]} 条消息，这天有什么记忆深刻的事吗？\")\n",
+    "print(f\"{dates_raw[min_i].month} 月 {dates_raw[min_i].day} 日只发送了 {data[min_i]} 条消息，面对面把话都说完啦！\")\n",
+    "\n",
+    "res = np.where(np.array(data) == 0)[0]\n",
+    "if len(res) != 0:\n",
+    "    print(f\"没发消息的日子有：\")\n",
+    "    for i in res:\n",
+    "        print(f\"  - {dates_raw[i].month} 月 {dates_raw[i].day} 日\")\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(14, 4))\n",
+    "ax.plot(dates_raw, data)\n",
+    "ax.set_ylabel(\"Messages\")\n",
+    "ax.yaxis.grid(True)\n",
+    "fig.autofmt_xdate()\n",
     "plt.show()"
    ]
   },
