add report of msg mean and mode

--- a/main.ipynb
+++ b/main.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#!pip install -U python-dotenv matplotlib"
+    "#!pip install -U python-dotenv matplotlib scipy"
    ]
   },
   {
@@ -38,6 +38,7 @@
     "from datetime import datetime, timezone, timedelta\n",
     "from dotenv import load_dotenv\n",
     "from pprint import pprint\n",
+    "from scipy import stats\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import os\n",
@@ -211,7 +212,7 @@
    "source": [
     "senders = [\"Purple\", \"Blue\"]\n",
     "senders_cn = [\"紫先生\", \"蓝小姐\"]\n",
-    "colors = [\"#b780ff\", \"#059af7\"] # purple, blue\n",
+    "colors = [\"#e9d8ff\", \"#b3e0fc\"] # purple, blue\n",
     "\n",
     "data = [\n",
     "    execute_query(msg_conn, \"SELECT COUNT(*) FROM MSG WHERE IsSender = 1\")[0][0],\n",
@@ -224,7 +225,7 @@
     "fig, ax = plt.subplots(figsize=(4, 4))\n",
     "ax.pie(\n",
     "    data,\n",
-    "    labels=[f\"Purple\\n{data[0]}\", f\"Blue\\n{data[1]}\"],\n",
+    "    labels=[f\"{senders[0]}\\n{data[0]}\", f\"{senders[1]}\\n{data[1]}\"],\n",
     "    autopct=\"%.2f%%\",\n",
     "    colors=colors,\n",
     "    wedgeprops=dict(width=0.6, edgecolor='w', linewidth=4),\n",
@@ -294,7 +295,7 @@
     "\n",
     "x = np.arange(2)\n",
     "width = 0.4\n",
-    "fig, ax = plt.subplots(figsize=(9, 4))\n",
+    "fig, ax = plt.subplots(figsize=(8, 4))\n",
     "for i, d in enumerate(data_show):\n",
     "    rects = ax.bar(x * width + i, d, width, color=colors)\n",
     "    ax.bar_label(rects)\n",
@@ -333,7 +334,7 @@
     "x = np.arange(len(show))\n",
     "width = 0.65\n",
     "bottom = np.zeros(len(show))\n",
-    "fig, ax = plt.subplots(figsize=(11, 4))\n",
+    "fig, ax = plt.subplots(figsize=(8, 3))\n",
     "for i, d in enumerate(data):\n",
     "    rects = ax.bar(x, d, width, bottom=bottom, color=colors[i])\n",
     "    ax.bar_label(rects, label_type=\"center\")\n",
@@ -371,9 +372,9 @@
     "print(f\"{day_cn[max_i]}的聊天最多，竟然有 {data_sum[max_i]} 条消息，比{day_cn[min_i]}多出了 {pct:.2f}% !\")\n",
     "\n",
     "x = np.arange(len(show))\n",
-    "width = 0.65\n",
+    "width = 0.6\n",
     "bottom = np.zeros(len(show))\n",
-    "fig, ax = plt.subplots(figsize=(6, 4))\n",
+    "fig, ax = plt.subplots(figsize=(6, 3))\n",
     "for i, d in enumerate(data):\n",
     "    rects = ax.bar(x, d, width, bottom=bottom, color=colors[i])\n",
     "    ax.bar_label(rects, label_type=\"center\")\n",
@@ -425,7 +426,7 @@
     "min_i = np.argmin(data)\n",
     "pct = data[max_i] * 100.0 / (data[min_i] + 1) - 100\n",
     "print(f\"{dates_raw[max_i].month} 月 {dates_raw[max_i].day} 日是聊天最多的一天，足足发送了 {data[max_i]} 条消息，这天有什么记忆深刻的事吗？\")\n",
-    "print(f\"{dates_raw[min_i].month} 月 {dates_raw[min_i].day} 日只发送了 {data[min_i]} 条消息，面对面把话都说完啦！\")\n",
+    "print(f\"{dates_raw[min_i].month} 月 {dates_raw[min_i].day} 日只发送了 {data[min_i]} 条消息，果然还是面对面的聊天更快！\")\n",
     "\n",
     "res = np.where(np.array(data) == 0)[0]\n",
     "if len(res) != 0:\n",
@@ -433,11 +434,74 @@
     "    for i in res:\n",
     "        print(f\"  - {dates_raw[i].month} 月 {dates_raw[i].day} 日\")\n",
     "\n",
-    "fig, ax = plt.subplots(figsize=(14, 4))\n",
+    "fig, ax = plt.subplots(figsize=(10, 3))\n",
     "ax.plot(dates_raw, data)\n",
     "ax.set_ylabel(\"Messages\")\n",
     "ax.yaxis.grid(True)\n",
     "fig.autofmt_xdate()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "18eebf0d-4276-4687-adef-ced03a4abb7a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f\"平均每天会产生 {np.mean(data):.2f} 条消息记录，最常出现的消息条数是 {stats.mode(data)[0]}。\")\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(10, 2))\n",
+    "ax.violinplot(data, orientation='horizontal', showmeans=True)\n",
+    "ax.set_yticklabels([])\n",
+    "ax.set_xlabel(\"Num of messages\")\n",
+    "ax.xaxis.grid(True)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b0fc75df-2ec6-4818-aa36-7cdab95cb280",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "query = \"\"\"\n",
+    "SELECT StrContent\n",
+    "FROM MSG\n",
+    "WHERE Type = 1\n",
+    "  AND SubType = 0\n",
+    "  AND IsSender = ?\n",
+    "\"\"\"\n",
+    "res1 = execute_query(msg_conn, query, [1])\n",
+    "res2 = execute_query(msg_conn, query, [0])\n",
+    "data1 = list(map(lambda r: len(r[0]), res1))\n",
+    "data2 = list(map(lambda r: len(r[0]), res2))\n",
+    "if VERBOSE == \"1\":\n",
+    "    pprint(res1[:10])\n",
+    "    pprint(data1[:10])\n",
+    "\n",
+    "# drop the longest 1%\n",
+    "data1_clean = sorted(data1)[:int(len(data1)*0.99)]\n",
+    "data2_clean = sorted(data2)[:int(len(data2)*0.99)]\n",
+    "\n",
+    "print(f\"{senders_cn[0]}平均每条消息会发 {np.mean(data1_clean):.2f} 个字，最常发送的字数是 {stats.mode(data1_clean)[0]}，字数中位数是 {int(np.median(data1_clean))}；\")\n",
+    "print(f\"{senders_cn[1]}平均每条消息会发 {np.mean(data2_clean):.2f} 个字，最常发送的字数是 {stats.mode(data2_clean)[0]}，字数中位数是 {int(np.median(data2_clean))}。\")\n",
+    "\n",
+    "fig, axs = plt.subplots(nrows=2, ncols=1, sharex=True, figsize=(10, 4))\n",
+    "parts = axs[0].violinplot(data1_clean, orientation='horizontal', showmeans=True)\n",
+    "for pc in parts[\"bodies\"]:\n",
+    "    pc.set_facecolor(colors[0])\n",
+    "    pc.set_alpha(1)\n",
+    "parts = axs[1].violinplot(data2_clean, orientation='horizontal', showmeans=True)\n",
+    "for pc in parts[\"bodies\"]:\n",
+    "    pc.set_facecolor(colors[1])\n",
+    "    pc.set_alpha(1)\n",
+    "for ax in axs:\n",
+    "    ax.set_yticklabels([])\n",
+    "    ax.set_xlabel(\"Characters\")\n",
+    "    ax.xaxis.grid(True)\n",
+    "    ax.xaxis.set_ticks(np.arange(1, max(data1_clean[-1], data2_clean[-1]) + 3, 3))\n",
     "plt.show()"
    ]
   },
