give figure titles

--- a/main.ipynb
+++ b/main.ipynb
@@ -5,9 +5,7 @@
    "id": "ef18c283-577b-4c7f-a0cc-5ec25a01954b",
    "metadata": {},
    "source": [
-    "### Requirements\n",
-    "\n",
-    "Uncomment this line to install requirements if necessary:"
+    "### Install requirements"
    ]
   },
   {
@@ -17,7 +15,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#!pip install -U python-dotenv matplotlib scipy"
+    "# Uncomment to install requirements if necessary:\n",
+    "#!pip install -U python-dotenv matplotlib scipy\n",
+    "\n",
+    "print(\"Done!\")"
    ]
   },
   {
@@ -61,7 +62,9 @@
     "    print(f\"  {FULL_DB_PATH=}\")\n",
     "    print(f\"  {START_TIMESTAMP=}\")\n",
     "    print(f\"  {END_TIMESTAMP=}\")\n",
-    "    print(f\"  {TARGET_ID=}\")"
+    "    print(f\"  {TARGET_ID=}\")\n",
+    "\n",
+    "print(\"Done!\")"
    ]
   },
   {
@@ -104,7 +107,9 @@
     "def msg_sequence_to_ctime(sequence):\n",
     "    ts = str(sequence)[:-3]\n",
     "    dt = datetime.fromtimestamp(int(ts))\n",
-    "    return dt.strftime(\"%c\")"
+    "    return dt.strftime(\"%c\")\n",
+    "\n",
+    "print(\"Done!\")"
    ]
   },
   {
@@ -230,6 +235,7 @@
     "    colors=colors,\n",
     "    wedgeprops=dict(width=0.6, edgecolor='w', linewidth=4),\n",
     ")\n",
+    "ax.set_title(\"Total messages per sender\")\n",
     "plt.show()"
    ]
   },
@@ -238,7 +244,7 @@
    "id": "7a7beb17-2cd0-4322-b3cf-a1cd86c7ad5a",
    "metadata": {},
    "source": [
-    "在这么多条消息中里..."
+    "在这么多条消息中..."
    ]
   },
   {
@@ -299,6 +305,7 @@
     "for i, d in enumerate(data_show):\n",
     "    rects = ax.bar(x * width + i, d, width, color=colors)\n",
     "    ax.bar_label(rects)\n",
+    "ax.set_title(\"Total messages per message type\")\n",
     "ax.set_ylabel(\"Messages\")\n",
     "ax.set_xticks(np.arange(len(show)) + width/2, show)\n",
     "plt.show()"
@@ -339,6 +346,7 @@
     "    rects = ax.bar(x, d, width, bottom=bottom, color=colors[i])\n",
     "    ax.bar_label(rects, label_type=\"center\")\n",
     "    bottom += d\n",
+    "ax.set_title(\"Total messages per month\")\n",
     "ax.set_ylabel(\"Messages\")\n",
     "ax.set_xticks(x, show)\n",
     "plt.show()"
@@ -379,6 +387,7 @@
     "    rects = ax.bar(x, d, width, bottom=bottom, color=colors[i])\n",
     "    ax.bar_label(rects, label_type=\"center\")\n",
     "    bottom += d\n",
+    "ax.set_title(\"Total messages per day of week\")\n",
     "ax.set_ylabel(\"Messages\")\n",
     "ax.set_xticks(x, show)\n",
     "plt.show()"
@@ -436,6 +445,7 @@
     "\n",
     "fig, ax = plt.subplots(figsize=(10, 3))\n",
     "ax.plot(dates_raw, data)\n",
+    "ax.set_title(\"Num of messages per day\")\n",
     "ax.set_ylabel(\"Messages\")\n",
     "ax.yaxis.grid(True)\n",
     "fig.autofmt_xdate()\n",
@@ -449,12 +459,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f\"平均每天会产生 {np.mean(data):.2f} 条消息记录，最常出现的消息条数是 {stats.mode(data)[0]}。\")\n",
+    "print(f\"平均每天会产生 {np.mean(data):.2f} 条消息记录，最常出现的消息条数是 {stats.mode(data)[0]}：\")\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(10, 2))\n",
     "ax.violinplot(data, orientation='horizontal', showmeans=True)\n",
     "ax.set_yticklabels([])\n",
-    "ax.set_xlabel(\"Num of messages\")\n",
+    "ax.set_xlabel(\"Messages\")\n",
+    "ax.set_title(\"Statistic of num of message per day\")\n",
     "ax.xaxis.grid(True)\n",
     "plt.show()"
    ]
@@ -486,7 +497,7 @@
     "data2_clean = sorted(data2)[:int(len(data2)*0.99)]\n",
     "\n",
     "print(f\"{senders_cn[0]}平均每条消息会发 {np.mean(data1_clean):.2f} 个字，最常发送的字数是 {stats.mode(data1_clean)[0]}，字数中位数是 {int(np.median(data1_clean))}；\")\n",
-    "print(f\"{senders_cn[1]}平均每条消息会发 {np.mean(data2_clean):.2f} 个字，最常发送的字数是 {stats.mode(data2_clean)[0]}，字数中位数是 {int(np.median(data2_clean))}。\")\n",
+    "print(f\"{senders_cn[1]}平均每条消息会发 {np.mean(data2_clean):.2f} 个字，最常发送的字数是 {stats.mode(data2_clean)[0]}，字数中位数是 {int(np.median(data2_clean))}：\")\n",
     "\n",
     "fig, axs = plt.subplots(nrows=2, ncols=1, sharex=True, figsize=(10, 4))\n",
     "parts = axs[0].violinplot(data1_clean, orientation='horizontal', showmeans=True)\n",
@@ -497,12 +508,21 @@
     "for pc in parts[\"bodies\"]:\n",
     "    pc.set_facecolor(colors[1])\n",
     "    pc.set_alpha(1)\n",
+    "axs[0].set_title(\"Statistic of num of characters per message\")\n",
+    "axs[1].set_xlabel(\"Characters\")\n",
     "for ax in axs:\n",
     "    ax.set_yticklabels([])\n",
-    "    ax.set_xlabel(\"Characters\")\n",
     "    ax.xaxis.grid(True)\n",
     "    ax.xaxis.set_ticks(np.arange(1, max(data1_clean[-1], data2_clean[-1]) + 3, 3))\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "913da7a9-3896-4aaf-9fa0-3e99a8a927d8",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
