add top 25 words

--- a/main.ipynb
+++ b/main.ipynb
@@ -16,7 +16,7 @@
    "outputs": [],
    "source": [
     "# Uncomment to install requirements if necessary:\n",
-    "#!pip install -U python-dotenv matplotlib scipy\n",
+    "#!pip install -U python-dotenv matplotlib scipy spacy-pkuseg\n",
     "\n",
     "print(\"Done!\")"
    ]
@@ -40,9 +40,11 @@
     "from dotenv import load_dotenv\n",
     "from pprint import pprint\n",
     "from scipy import stats\n",
+    "import matplotlib.font_manager as fm\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import os\n",
+    "import spacy_pkuseg as pkuseg\n",
     "import sqlite3\n",
     "import sys\n",
     "\n",
@@ -109,6 +111,10 @@
     "    dt = datetime.fromtimestamp(int(ts))\n",
     "    return dt.strftime(\"%c\")\n",
     "\n",
+    "def datetime_to_msg_sequence(date_time):\n",
+    "    ts = int(date_time.timestamp())\n",
+    "    return str(ts) + \"000\"\n",
+    "\n",
     "print(\"Done!\")"
    ]
   },
@@ -135,7 +141,7 @@
     "    FROM MSG\n",
     "    WHERE Sequence >= {START_TIMESTAMP + '000'}\n",
     "      AND Sequence <  {END_TIMESTAMP + '000'}\n",
-    "      AND StrTalker = '{TARGET_ID}';\n",
+    "      AND StrTalker = '{TARGET_ID}'\n",
     "    \"\"\"\n",
     "    msg = execute_query(full_conn, query)\n",
     "    if not msg:\n",
@@ -215,6 +221,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "fprop = fm.FontProperties(fname=\"NotoSansSC-Regular.ttf\")\n",
     "senders = [\"Purple\", \"Blue\"]\n",
     "senders_cn = [\"紫先生\", \"蓝小姐\"]\n",
     "colors = [\"#e9d8ff\", \"#b3e0fc\"] # purple, blue\n",
@@ -279,6 +286,7 @@
     "    pprint(data)\n",
     "\n",
     "show = [\"Text\", \"Pic\", \"Video\", \"Voice\", \"Emoji\", \"Call\", \"Tap\", \"Trans\"]\n",
+    "show_cn = [\"文字消息\", \"图片\", \"视频\", \"语音\", \"表情包\", \"通话\", \"拍一拍\", \"红包和转账\"]\n",
     "data_show = np.array([data[i] for i in show])\n",
     "if VERBOSE == \"1\":\n",
     "    pprint(data_show)\n",
@@ -290,14 +298,8 @@
     "    pct = d[morer] * 100.0 / d[lesser] - 100\n",
     "    print(f\"{senders_cn[morer]}发出了更多的{desc}，达到了 {d[morer]} 条，比{senders_cn[lesser]}多出了 {pct:.2f}% ！\")\n",
     "\n",
-    "print_type_compare(\"Text\", \"文字消息\")\n",
-    "print_type_compare(\"Pic\", \"图片\")\n",
-    "print_type_compare(\"Video\", \"视频\")\n",
-    "print_type_compare(\"Voice\", \"语音\")\n",
-    "print_type_compare(\"Emoji\", \"表情包\")\n",
-    "print_type_compare(\"Call\", \"通话\")\n",
-    "print_type_compare(\"Tap\", \"拍一拍\")\n",
-    "print_type_compare(\"Trans\", \"红包和转账\")\n",
+    "for i, k in enumerate(show):\n",
+    "    print_type_compare(k, show_cn[i])\n",
     "\n",
     "x = np.arange(2)\n",
     "width = 0.4\n",
@@ -307,7 +309,7 @@
     "    ax.bar_label(rects)\n",
     "ax.set_title(\"Total messages per message type\")\n",
     "ax.set_ylabel(\"Messages\")\n",
-    "ax.set_xticks(np.arange(len(show)) + width/2, show)\n",
+    "ax.set_xticks(np.arange(len(show)) + width/2, show_cn, fontproperties=fprop)\n",
     "plt.show()"
    ]
   },
@@ -401,27 +403,45 @@
    "outputs": [],
    "source": [
     "dates = []\n",
-    "dates_raw = []\n",
-    "dt = datetime.fromtimestamp(int(START_TIMESTAMP), tz=timezone(timedelta(hours=8)))\n",
+    "dates_per_2week = []\n",
+    "start = datetime.fromtimestamp(int(START_TIMESTAMP), tz=timezone(timedelta(hours=8)))\n",
     "end = datetime.fromtimestamp(int(END_TIMESTAMP), tz=timezone(timedelta(hours=8)))\n",
+    "dt = start\n",
     "while dt < end:\n",
-    "    dates.append([dt.strftime(\"%b %d\").replace(\" 0\", \"  \"), dt.strftime(\"%Y\")])\n",
-    "    dates_raw.append(dt)\n",
+    "    dates.append(dt)\n",
     "    dt += timedelta(days=1)\n",
+    "dt = start\n",
+    "while dt < end:\n",
+    "    dates_per_2week.append(dt)\n",
+    "    dt += timedelta(weeks=2)\n",
     "if VERBOSE == \"1\":\n",
-    "    pprint(dates[:10])\n",
-    "    pprint(dates[-10:])\n",
+    "    pprint(dates[:3])\n",
+    "    pprint(dates[-3:])\n",
+    "    pprint(dates_per_2week[:3])\n",
     "\n",
+    "query = f\"\"\"\n",
+    "SELECT COUNT(*)\n",
+    "FROM MSG\n",
+    "WHERE Sequence >= ?\n",
+    "  AND Sequence <  ?\n",
+    "\"\"\"\n",
     "data = []\n",
-    "for d in dates:\n",
+    "for dt in dates:\n",
     "    data.append(execute_query(\n",
     "        msg_conn,\n",
-    "        \"SELECT COUNT(*) FROM MSG WHERE Reserved6 LIKE ?\",\n",
-    "        [f\"%{d[0]}%{d[1]}\"]\n",
+    "        query,\n",
+    "        [datetime_to_msg_sequence(dt), datetime_to_msg_sequence(dt + timedelta(days=1))]\n",
+    "    )[0][0])\n",
+    "data_per_2week = []\n",
+    "for dt in dates_per_2week:\n",
+    "    data_per_2week.append(execute_query(\n",
+    "        msg_conn,\n",
+    "        query,\n",
+    "        [datetime_to_msg_sequence(dt), datetime_to_msg_sequence(dt + timedelta(weeks=2))]\n",
     "    )[0][0])\n",
     "if VERBOSE == \"1\":\n",
     "    pprint(data[:10])\n",
-    "    pprint(data[-10:])"
+    "    pprint(data_per_2week[:10])"
    ]
   },
   {
@@ -434,18 +454,26 @@
     "max_i = np.argmax(data)\n",
     "min_i = np.argmin(data)\n",
     "pct = data[max_i] * 100.0 / (data[min_i] + 1) - 100\n",
-    "print(f\"{dates_raw[max_i].month} 月 {dates_raw[max_i].day} 日是聊天最多的一天，足足发送了 {data[max_i]} 条消息，这天有什么记忆深刻的事吗？\")\n",
-    "print(f\"{dates_raw[min_i].month} 月 {dates_raw[min_i].day} 日只发送了 {data[min_i]} 条消息，果然还是面对面的聊天更快！\")\n",
+    "print(f\"{dates[max_i].month} 月 {dates[max_i].day} 日是聊天最多的一天，足足发送了 {data[max_i]} 条消息，这天有什么记忆深刻的事吗？\")\n",
+    "print(f\"{dates[min_i].month} 月 {dates[min_i].day} 日只发送了 {data[min_i]} 条消息，果然还是面对面的聊天更快！\")\n",
     "\n",
     "res = np.where(np.array(data) == 0)[0]\n",
     "if len(res) != 0:\n",
     "    print(f\"没发消息的日子有：\")\n",
     "    for i in res:\n",
-    "        print(f\"  - {dates_raw[i].month} 月 {dates_raw[i].day} 日\")\n",
+    "        print(f\"  - {dates[i].month} 月 {dates[i].day} 日\")\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(10, 3))\n",
-    "ax.plot(dates_raw, data)\n",
+    "ax.plot(dates, data)\n",
     "ax.set_title(\"Num of messages per day\")\n",
+    "ax.set_ylabel(\"Messages\")\n",
+    "ax.yaxis.grid(True)\n",
+    "fig.autofmt_xdate()\n",
+    "plt.show()\n",
+    "\n",
+    "fig, ax = plt.subplots(figsize=(10, 3))\n",
+    "ax.plot(dates_per_2week, data_per_2week, marker=\".\")\n",
+    "ax.set_title(\"Num of messages per 2 weeks\")\n",
     "ax.set_ylabel(\"Messages\")\n",
     "ax.yaxis.grid(True)\n",
     "fig.autofmt_xdate()\n",
@@ -514,6 +542,99 @@
     "    ax.set_yticklabels([])\n",
     "    ax.xaxis.grid(True)\n",
     "    ax.xaxis.set_ticks(np.arange(1, max(data1_clean[-1], data2_clean[-1]) + 3, 3))\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8bb123f4-bee8-4f4e-8b2f-ca6605701f50",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data1 = list(map(lambda r: r[0], res1))\n",
+    "data2 = list(map(lambda r: r[0], res2))\n",
+    "data1_clean = sorted(data1)[:int(len(data1)*0.99)]\n",
+    "data2_clean = sorted(data2)[:int(len(data2)*0.99)]\n",
+    "\n",
+    "if not \"seg\" in locals() or (\"seg\" in locals() and seg == None):\n",
+    "    seg = pkuseg.pkuseg(model_name=\"web\", postag=True, user_dict=\"user_dict.txt\") # run this twice may crash\n",
+    "\n",
+    "cared_tags = [ # https://github.com/lancopku/pkuseg-python/blob/master/tags.txt\n",
+    "    \"n\", \"v\", \"i\", \"j\", \"nr\"\n",
+    "]\n",
+    "dont_care_words = [\n",
+    "    \"可以\", \"感觉\", \"可能\", \"应该\", \"出来\", \"回来\", \"时间\", \"没有\",\n",
+    "    \"时候\", \"觉得\", \"看到\", \"还有\", \"小时\", \"东西\", \"过来\", \"回去\",\n",
+    "    \"吃完\", \"知道\", \"以为\", \"开始\", \"准备\", \"只能\", \"准备\"\n",
+    "]\n",
+    "\n",
+    "seg_data1 = []\n",
+    "seg_data2 = []\n",
+    "for d in data1_clean:\n",
+    "    cut = seg.cut(d)\n",
+    "    cut = [c for c in cut if len(c[0]) > 1] # filter out len<=1 words\n",
+    "    cut = [c for c in cut if c[1] in cared_tags] # only count cared tags\n",
+    "    cut = [c for c in cut if not c[0] in dont_care_words] # filter out dont-care words\n",
+    "    words = [c[0] for c in cut]\n",
+    "    seg_data1 += words\n",
+    "for d in data2_clean:\n",
+    "    cut = seg.cut(d)\n",
+    "    cut = [c for c in cut if len(c[0]) > 1]\n",
+    "    cut = [c for c in cut if c[1] in cared_tags]\n",
+    "    cut = [c for c in cut if not c[0] in dont_care_words]\n",
+    "    words = [c[0] for c in cut]\n",
+    "    seg_data2 += words\n",
+    "if VERBOSE == \"1\":\n",
+    "    pprint(seg_data1[:10])\n",
+    "\n",
+    "unique, counts = np.unique(seg_data1, return_counts=True)\n",
+    "sorted_indices = np.argsort(-counts)\n",
+    "sorted_unique1 = unique[sorted_indices]\n",
+    "sorted_counts1 = counts[sorted_indices]\n",
+    "unique, counts = np.unique(seg_data2, return_counts=True)\n",
+    "sorted_indices = np.argsort(-counts)\n",
+    "sorted_unique2 = unique[sorted_indices]\n",
+    "sorted_counts2 = counts[sorted_indices]\n",
+    "if VERBOSE == \"1\":\n",
+    "    pprint(sorted_unique1[:30])\n",
+    "    pprint(sorted_counts1[:30])\n",
+    "    pprint(sorted_unique2[:30])\n",
+    "    pprint(sorted_counts2[:30])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f4e9155b-7e77-4b2e-bb7d-8a842ff4a1fe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "idx1 = np.argwhere(sorted_unique1 == \"老婆\")[0][0]\n",
+    "idx2 = np.argwhere(sorted_unique2 == \"老公\")[0][0]\n",
+    "print(f\"这些是我们说过的最多的词，其中...\")\n",
+    "print(f\"{senders_cn[0]}说的「老婆」出现了 {sorted_counts1[idx1]} 次，位于 Top {idx1 + 1}！\")\n",
+    "print(f\"{senders_cn[1]}说的「老公」出现了 {sorted_counts2[idx2]} 次，位于 Top {idx2 + 1}！\")\n",
+    "\n",
+    "num_show = 25\n",
+    "y = np.arange(num_show)\n",
+    "width = 0.7\n",
+    "\n",
+    "fig, axs = plt.subplots(nrows=2, ncols=1, sharex=True, figsize=(7, num_show / 1.8))\n",
+    "\n",
+    "rects = axs[0].barh(y, np.flip(sorted_counts1[:num_show]), width, color=colors[0])\n",
+    "axs[0].bar_label(rects, label_type=\"center\")\n",
+    "axs[0].set_title(f\"Top {num_show} words\")\n",
+    "axs[0].set_yticks(y, np.flip(sorted_unique1[:num_show]), fontproperties=fprop)\n",
+    "axs[0].xaxis.grid(True)\n",
+    "\n",
+    "rects = axs[1].barh(y, np.flip(sorted_counts2[:num_show]), width, color=colors[1])\n",
+    "axs[1].bar_label(rects, label_type=\"center\")\n",
+    "axs[1].set_xlabel(\"Occurrences\")\n",
+    "axs[1].set_yticks(y, np.flip(sorted_unique2[:num_show]), fontproperties=fprop)\n",
+    "axs[1].xaxis.grid(True)\n",
+    "\n",
+    "fig.subplots_adjust(hspace=0)\n",
     "plt.show()"
    ]
   },
